import 'package:mastermind/v4_oop_views/utils/console.dart';

class TitleView {
  void draw() {
    Console.write('');
    Console.write('----- MASTERMIND -----');
    Console.write('');
  }
}
